# RM_Gimbal

./: .cproject  .gitignore  .project  CMakeLists.txt  LOG.txt  RoboMaster_Holder Debug.launch  RoboMaster_Holder Release.launch
BSP/: bsp.c  can1.c  can1.h  can2.c  led.h  tim6.c  tim6.h
Gimbal Gerber/: Gimbal_3.0.DRL  Gimbal_3.0.DRR  Gimbal_3.0.EXTREP  Gimbal_3.0.GBL  Gimbal_3.0.GBO  Gimbal_3.0.GBP  Gimbal_3.0.GBS  Gimbal_3.0.GD1  Gimbal_3.0.GG1  Gimbal_3.0.GKO  Gimbal_3.0.GPB  Gimbal_3.0.GPT  Gimbal_3.0.GTL  Gimbal_3.0.GTO  Gimbal_3.0.GTP  Gimbal_3.0.GTS  Gimbal_3.0.LDP  Gimbal_3.0.REP  Gimbal_3.0.RUL  Gimbal_3.0.TXT  Gimbal_3.0.apr  Status Report.Txt
Keil/: STM32F4.uvopt
MPU6050/: mpu6050_driver.c
Project/: STM32F4.uvgui.eason_chen.bak  STM32F4.uvgui.huasen.zhang  STM32F4.uvgui.ppnn13  STM32F4.uvgui.texot  STM32F4.uvgui_dell.bak  STM32F4.uvopt  STM32F4_uvproj.bak
Project/Objects/: STM32F4.build_log.htm  STM32F4.htm  STM32F4.plg  app.d  bsp.crf  delay.crf  global_varialbe.crf  imu.d  mpu6050_driver.crf  mpu6050_i2c.crf  mpu6050_interrupt.d  pwm.crf  pwm.d  stm32f4xx_can.crf  stm32f4xx_dma.crf  stm32f4xx_exti.crf  stm32f4xx_gpio.crf  stm32f4xx_i2c.crf  stm32f4xx_rcc.crf  stm32f4xx_syscfg.crf  stm32f4xx_wwdg.crf  system_stm32f4xx.crf  usart1.crf  usart2.crf
STM32F405 云台主控/STM32F405RGT6_Gimbal_for Summer camp7.3/BSP/: bsp.h  led.c  usart1.c
STM32F405 云台主控/STM32F405RGT6_Gimbal_for Summer camp7.3/MPU6050/: mpu6050_driver.h  mpu6050_i2c.c  mpu6050_interrupt.c
STM32F405 云台主控/STM32F405RGT6_Gimbal_for Summer camp7.3/Project/: JLinkLog.txt  STM32F4.uvgui.dell  STM32F4.uvgui.eason.chen  STM32F4.uvgui.yue.zhao  STM32F4.uvgui.yue_zhao.bak  STM32F4.uvproj  STM32F4_STM32F4.dep  STM32F4_uvopt.bak
STM32F405 云台主控/STM32F405RGT6_Gimbal_for Summer camp7.3/Project/Listings/: STM32F4.map  startup_stm32f4xx.lst
STM32F405 云台主控/STM32F405RGT6_Gimbal_for Summer camp7.3/Project/Objects/: STM32F4.axf  STM32F4.lnp  STM32F4_STM32F4.dep  app.crf  can1.crf  can2.crf  imu.crf  laser.crf  led.crf  main.crf  main.d  misc.crf  mpu6050_driver.d  mpu6050_i2c.d  stm32f4xx_flash.crf  stm32f4xx_it.crf  stm32f4xx_tim.crf  stm32f4xx_usart.crf  tim6.crf  tim6.d
STM32F405 云台主控/STM32F405RGT6_Gimbal_for Summer camp7.3/User/: Imu.c  main.h
User/: Imu.h  app.c  app.h  main.c
include/mylib/: can1.h  can2.h  can_packet.h  delay.h  friction.h  gimbal_motor.h  laser.h  led.h  maincontrol.h  myiic.h  pid.h  shooter.h  ticker.h  tim6.h  timer.h  usart1.h  usart2.h
include/mylib/mpu6050/: mpu6050.h
include/mylib/mpu6050/eMPL/: inv_mpu.h  inv_mpu_dmp_motion_driver.h
include/mylib/mpu6050_ori/: mpu6050_driver.h  mpu6050_interrupt.h
include/user/: Imu.h  app.h  global_define.h  main.h  report.h  stm32f4xx_it.h
src/mylib/: bsp.c  can1.c  can2.c  delay.c  friction.c  gimbal_motor.c  laser.c  led.c  maincontrol.c  myiic.c  pid.c  pwm.c  shooter.c  ticker.c  tim6.c  timer.c  usart1.c  usart2.c
src/mylib/mpu6050/: mpu6050.c
src/mylib/mpu6050/eMPL/: inv_mpu.c  inv_mpu_dmp_motion_driver.c
src/mylib/mpu6050_ori/: mpu6050_driver.c  mpu6050_i2c.c  mpu6050_interrupt.c  mpu6050_process.c
src/user/: Imu.c  app.c  global_varialbe.c  main.c  report.c  stm32f4xx_it.c
